# cxb

./: .gitignore  .npmignore  .releaserc  CHANGELOG.md  azure-pipelines.yml  cli.js  commitlint.config.js  cxb.config.js  jest.config.ci.js  jest.config.js  package-lock.json  package.json  readme.rst  webpack.config.js
ci/: steps.yml  upload.yml
src/: cli.ts  cmLog.ts  dist.ts  downloader.ts  environment.ts  index.ts  runtimePaths.ts  targetOptions.ts  tsconfig.json  uploader.ts
test/: build.spec.ts  index.ts  package.tpl  pmconfig.js  test.js
test/simple/: CMakeLists.txt  cxb.config.js  index.cpp  index.ts  package.json
test/use/: package.json
